fix: prevented multiple external link button squeezed on mobile screen

--- a/assets/css/project-details-style.css
+++ b/assets/css/project-details-style.css
@@ -56,6 +56,7 @@ main > article > p > a {
 
 #external-links {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-around;
 }
 
